--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,7 @@
 	</dependencies>
 
 	<build>
+		<finalName>ramengo-admin</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
