--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=ramenGO-admin
 
-spring.datasource.url=${DATABASE_URL}
-spring.datasource.username=${DATABASE_USERNAME}
-spring.datasource.password=${DATABASE_PASSWORD}
+spring.datasource.url=jdbc:postgresql://localhost:5432/
+spring.datasource.username=postgres
+spring.datasource.password=1234
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 
@@ -17,6 +17,8 @@ spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
 api.key=ZtVdh8XQ2U8pWI2gmZ7f796Vh8GllXoN7mr0djNf
+
+debug=true
 
 aws.sns.topic.broth.arn=arn:aws:sns:us-east-1:483037332849:broth-catalog
 aws.sns.topic.protein.arn=arn:aws:sns:us-east-1:483037332849:protein-catalog
