feat: add call to orders service

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,6 +18,8 @@ spring.servlet.multipart.max-request-size=10MB
 
 api.key=ZtVdh8XQ2U8pWI2gmZ7f796Vh8GllXoN7mr0djNf
 
+apiUrl=https://redventures.onrender.com
+
 aws.sns.topic.broth.arn=arn:aws:sns:us-east-1:483037332849:broth-catalog
 aws.sns.topic.protein.arn=arn:aws:sns:us-east-1:483037332849:protein-catalog
 
