--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,13 @@
 			<artifactId>aws-java-sdk-sns</artifactId>
 			<version>1.12.62</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.11.0</version>
+		</dependency>
+
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
