feat: add max-swallow-size

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,6 +16,8 @@ api.security.token.secret=${JWT_SECRET:my-secret-key}
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
+server.tomcat.max-swallow-size=-1
+
 api.key=ZtVdh8XQ2U8pWI2gmZ7f796Vh8GllXoN7mr0djNf
 
 api.broth.url=https://redventures.onrender.com/broths
